# Aidflow

./: .gitignore  Cargo.toml  DEPLOYMENT_SUCCESS.md  PROJECT_SUMMARY.md  README.md  SMART_CONTRACT.md  WINDOWS_DEFENDER_SOLUTIONS.md  docker-compose.yml  fix-defender-admin.ps1  package.json  setup.ps1  start-aidflow.ps1
backend/: .env.example  API_DOCUMENTATION.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  package.json
backend/migrations/: 20250101000000_initial.sql
backend/src/: config.rs  error.rs  main.rs  models.rs  server.js
backend/src/config/: database.js  stellar.js
backend/src/models/: campaign.model.js  disbursement.model.js  donation.model.js
backend/src/routes/: audit.routes.js  audit.rs  auth.routes.js  campaign.routes.js  campaign.rs  disbursement.routes.js  disbursement.rs  donation.routes.js  donation.rs  mod.rs  organization.rs  recipient.routes.js  stellar.routes.js
backend/src/services/: mod.rs  stellar.service.js  stellar_service.rs
contracts/donation-contract/: Cargo.toml
contracts/donation-contract/src/: lib.rs  test.rs
database/: schema.sql
docs/: API.md  COMPLIANCE.md  DEMO_GUIDE.md  DEPLOYMENT.md  QUICK_START.md
frontend/: .env.example  FRONTEND_IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.vue  index.css
frontend/src/assets/: main.css
frontend/src/components/: Footer.js  Footer.vue  Navbar.js  Navbar.vue
frontend/src/pages/: AuditDashboard.js  CampaignDetail.js  (+5 more)
(+14 files in other folders)
