[workspace]
resolver = "2"
members = [
    "contracts/donation-contract",
    "backend"
]

[workspace.dependencies]
soroban-sdk = "23.1.0"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
stellar-base = "0.1"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-logs]
inherits = "release"
